modified code for clearing screen