@@ -7,15 +7,31 @@ public class UIFunctions {
     public static void clear() {
         try
         {
+            /*
+
+            final String os = System.getProperty("os.name");
+            if (os.contains("Windows"))
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            else
+                Runtime.getRuntime().exec("clear");
+
+
+            */
+            
             final String os = System.getProperty("os.name");
 
             if (os.contains("Windows"))
             {
-                Runtime.getRuntime().exec("cls");
+                // Runtime.getRuntime().exec("cls");
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             }
             else
             {
-                Runtime.getRuntime().exec("clear");
+                // Runtime.getRuntime().exec("clear");
+                // System.out.print("\033\143");
+                System.out.print("\033[H\033[2J");  
+                System.out.flush();
+                
             }
         }
         catch (final Exception e)
